--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@ Fax: (1) 434 982 3084
 <h2>Teaching :</h2>
 
 <p>
-Spring 2020: I am teaching two sections of MATH 3310 (Basic Real Analysis).
+   Fall 2023: I taught two sections of MATH 3250 (Ordinary Differential Equations).
+<p>
+   Spring 2023: I taught MATH 8450 (Topics in Mathematical Physics) - Topic: <a href="MATH8450Spring2023.html">Mathematics of Quantum Field Theory</a>.
+<p>
+   Fall 2022: I taught two sections of MATH 3250 (Ordinary Differential Equations).
+<p>   
+   Spring 2022: I taught MATH 4110 (Introduction to Stochastic Processes), and MATH 7410 (Functional Analysis I).   
+<p>
+   Fall 2021: On Sesqui leave (sabbatical).
+<p>
+   Spring 2021: I taught MATH 7310 (Real Analysis and Linear Spaces I).
+<p>
+   Fall 2020: I taught two sections of MATH 3250 (Ordinary Differential Equations).
+<p>
+Spring 2020: I taught two sections of MATH 3310 (Basic Real Analysis).
 <p>
 Fall 2019: I taught MATH 4720 (Introduction to Differential Geometry).
 <p>
@@ -45,7 +59,7 @@ Fall 2018: I taught MATH 4770 (General Topology).
 <p>
 Spring 2018: I taught two sections of MATH 3100 (Introduction to Probability).
 <p>
-Fall 2017: I taught MATH 7320  (Real Analysis and Linear Spaces II).
+Fall 2017: I taught MATH 7320  (Real Analysis and Linear Spaces II). Topic: <a href="MATH7320Fall2017.html">Schwartz Distributions</a>.
 <p>
 Spring 2017:  I taught MATH 7310 (Real Analysis and Linear Spaces I).
 <p>
