--- a/MATH8450Spring2023.html
+++ b/MATH8450Spring2023.html
@@ -20,31 +20,31 @@ Topic: Mathematics of Quantum Field Theory
 <p>
 Partial set of lecture notes:
 <p>
-   <a href="QFT23Lecture1.pdf">Lecture 1</a>. 
+   <a href="QFT23Lecture1.pdf">Lecture 1</a>: Overview. Presentation of the main problem regarding the definition and construction of a QFT model. Example of the Euclidean scalar field model with a quartic interaction. 
 <p>
-   <a href="QFT23Lecture2.pdf">Lecture 2</a>. 
+   <a href="QFT23Lecture2.pdf">Lecture 2</a>. Continued. Basic example of a renormalization procedure.
 <p>
-   <a href="QFT23Lecture3.pdf">Lecture 3</a>.    
+   <a href="QFT23Lecture3.pdf">Lecture 3</a>. Multivariate formal power series. Explicit composition.   
 <p>
-   <a href="QFT23Lecture4.pdf">Lecture 4</a>. 
+   <a href="QFT23Lecture4.pdf">Lecture 4</a>. The Inverse Function Theorem (existence and uniqueness) for multivariate formal power series. Introduction to tensors and diagrammatic algebra.
 <p>
-   <a href="QFT23Lecture5.pdf">Lecture 5</a>. 
+   <a href="QFT23Lecture5.pdf">Lecture 5</a>. The Cayley-Hamilton Theorem in pictures. Diagrammatic algebra for homogeneous polynomials. A glimpse of classical invariant theory. Graphical formulas for the discriminant of the binary quadratic, and for the cubic, in relation to Cardano's formula for the roots of a cubic.
 <p>
-   <a href="QFT23Lecture6.pdf">Lecture 6</a>. 
+   <a href="QFT23Lecture6.pdf">Lecture 6</a>. Explicit formulas for the reversion of formal power series, i.e., the Inverse Function Theorem using diagrammatic expansions in terms of tree graphs. Results about trees. Caylay's Theorem for counting trees.
 <p>
-   <a href="QFT23Lecture7.pdf">Lecture 7</a>. 
+   <a href="QFT23Lecture7.pdf">Lecture 7</a>. Continued. Simple one-dimensional example as a sanity check. Comparison with formula for root of a quadratic equation. Proof of convergence of the tree expansion.
 <p>
-   <a href="QFT23Lecture8.pdf">Lecture 8</a>. 
+   <a href="QFT23Lecture8.pdf">Lecture 8</a>. Detailed proofs of results about trees. Introduction to Gaussian integrals. Statement of the Isserlis-Wick Theorem for moments of multivariate Gaussians.
 <p>
-   <a href="QFT23Lecture9.pdf">Lecture 9</a>. 
+   <a href="QFT23Lecture9.pdf">Lecture 9</a>. Proof of the Isserlis-Wick Theorem. Quick introduction to category theory: categories and functors. Lots of examples.
 <p>
-   <a href="QFT23Lecture10.pdf">Lecture 10</a>. 
+   <a href="QFT23Lecture10.pdf">Lecture 10</a>. Introduction to QFT perturbation theory using category theory. Discussion of convergence issues. Example of zero-dimensional QFT, and Borel summability.
 <p>
-   <a href="QFT23Lecture11.pdf">Lecture 11</a>. 
+   <a href="QFT23Lecture11.pdf">Lecture 11</a>. Rigorous presentation of QFT perturbation theory in terms of Feynman diagrams, using Joyal's theory of combinatorial species. Symmetry factors.
 <p>
-   <a href="QFT23Lecture12.pdf">Lecture 12</a>. 
+   <a href="QFT23Lecture12.pdf">Lecture 12</a>. Continued. Natural transformations or morphisms of functors. Statement of the main "integration over the fiber" theorem.
 <p>
-   <a href="QFT23Lecture13.pdf">Lecture 13</a>. 
+   <a href="QFT23Lecture13.pdf">Lecture 13</a>. Proof of the main theorem.
 
 </body>
 </html>
