--- a/research.html
+++ b/research.html
@@ -39,6 +39,9 @@ to problems in algebraic geometry and representation theory.
 </li>
 
 <BR>
+<h1><a href="publications.html">Publications and Preprints</a></h1>
+   
+<BR>
 <h2>Editorial activities :</h2> 
 <h3><a href="http://www.springer.com/birkhauser/physics/journal/23">Annales Henri Poincar&eacute;</a>.</h3>
 <h3><a href="http://jmp.aip.org/about/about_the_journal">Journal of Mathematical Physics</a>,  (2013-2015).</h3>
