--- a/research.html
+++ b/research.html
@@ -108,7 +108,7 @@ Statistical Mechanics</a>.</h3>
 <BR>
 <h2> Slides of talks : </h2> 
 <p>
-- A. A., <a href="AbdesselamAQFPseminar2021.pdf">"Exploring conformal invariance with hierarchical models"</a>, slides of talk at the <a href="">Analysis, Quantum Fields, and Probability</a>a seminar, October 2021. <a href="https://www.youtube.com/watch?v=CZLGJPRXyq0">Video of the talk</a>.  
+- A. A., <a href="AbdesselamAQFPseminar2021.pdf">"Exploring conformal invariance with hierarchical models"</a>, slides of talk at the <a href="https://researchseminars.org/seminar/AQFP">Analysis, Quantum Fields, and Probability</a> seminar, October 2021. <a href="https://www.youtube.com/watch?v=CZLGJPRXyq0">Video of the talk</a>.  
 <p>
 - A. A., <a href="TalkCambridgeOct2018.pdf">"Pointwise multiplication of random Schwartz distributions with Wilson's operator product expansion"</a>, slides of talk at the conference
 "Quantum field theory, renormalisation and stochastic partial differential equations", Cambridge, UK, October 2018.
