--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@ Fax: (1) 434 982 3084
 <a href="research.html"> <h1> Research Page </h1> </a>
 
 <p>
-<a href="teaching.html"> <h1> Teaching </h1> </a>a
+<a href="teaching.html"> <h1> Teaching </h1> </a>
 
+<p>
+   My former Ph.D. student's page: <a href="https://www.imperial.ac.uk/people/a.chandra">Ajay Chandra</a>, Senior Lecturer at Imperial College, London, UK.
 
 <h2>Other activities :</h2>
 
