--- a/MATH8450Spring2024.html
+++ b/MATH8450Spring2024.html
@@ -18,7 +18,7 @@ Topic: Mathematics of Quantum Field Theory
 
 
 <p>
-
+I will write lecture notes for the course, as we go along. For the beginning (1st third or half of the course), we will follow the notes already written <a href="MATH8450Spring2023.html">here</a>.
 
 
 </body>
