--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Fax: (1) 434 982 3084
 
 
 <p>
-<a href="research.html"> <h1> Research Page </h1> </a>
+<a href="research.html"> <h1> Research </h1> </a>
 
 <p>
 <a href="teaching.html"> <h1> Teaching </h1> </a>
