--- a/teaching.html
+++ b/teaching.html
@@ -8,6 +8,9 @@
 <body bgcolor="#FFFFFF">
 &nbsp;
 
+
+
+<a href="index.html"> Back to homepage </a>
    
 <p>
 <h2>Abdelmalek Abdesselam</h2>   
@@ -103,7 +106,8 @@ Spring 2008: On leave from teaching duties, visiting the Isaac Newton Institute 
 Fall 2007: I taught two sections of MATH 132 (Calculus II).
 
 
-
+<p>
+<a href="index.html"> Back to homepage </a>
 
 </body>
 </html>
