--- a/publications.html
+++ b/publications.html
@@ -23,11 +23,14 @@
 <h2> Preprints : </h2> 
 
 <p>
-- A. A., P. Brunialti, T. Doan and P. Velie,
+- A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of ℓ-tuples of pairwise commuting permutations",
+<a href="https://arxiv.org/abs/2403.01441">arXiv:2403.01441[math.CO]</a>.
+<p>
+- A. A., P. Brunialti, T. Doan, and P. Velie,
 "A bijection for tuples of commuting permutations and a log-concavity conjecture",
 <a href="https://arxiv.org/abs/2309.09407">arXiv:2309.09407[math.CO]</a>.
 <p>
-- A. A. and A. Thomas, "Structure constants for simple Lie algebras from principal sl2-triple",
+- A. A., and A. Thomas, "Structure constants for simple Lie algebras from principal sl2-triple",
 <a href="https://arxiv.org/abs/2309.08213">arXiv:2309.08213[math.RT]</a>.  
 <p>
 - A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations",
@@ -36,16 +39,16 @@
 - A. A., "Non-Abelian correlation inequalities and stable determinantal polynomials",
 <a href="https://arxiv.org/abs/2207.07603">arXiv:2207.07603[math-ph]</a>.
 <p>
-- A. A., G. W. Anderson and A. R. Miller, "Tridiagonalized GUE matrices are a matrix model for labeled mobiles",
+- A. A., G. W. Anderson, and A. R. Miller, "Tridiagonalized GUE matrices are a matrix model for labeled mobiles",
 <a href="http://arxiv.org/abs/1404.7415">arXiv:1404.7415[math.PR]</a>.
 <p>
--  A. A., A. Chandra and G. Guadagni, "Rigorous quantum field theory functional integrals over the p-adics I: anomalous dimensions",
+-  A. A., A. Chandra, and G. Guadagni, "Rigorous quantum field theory functional integrals over the p-adics I: anomalous dimensions",
 <a href="http://arxiv.org/abs/1302.5971">arXiv:1302.5971[math.PR]</a>.
 <p>
-- A. A., A. Chandra and G. Guadagni, "Rigorous quantum field theory functional integrals over the p-adics: research announcement",
+- A. A., A. Chandra, and G. Guadagni, "Rigorous quantum field theory functional integrals over the p-adics: research announcement",
 <a href="http://arxiv.org/abs/1210.7717"> arXiv:1210.7717[math.PR]</a>.
 <p>
-- A. A. and G. W. Anderson, "Counting colored planar maps free-probabilistically",
+- A. A., and G. W. Anderson, "Counting colored planar maps free-probabilistically",
 <a href="http://arxiv.org/abs/1203.3185"> arXiv:1203.3185v2[math.PR]</a>.
 <p>
 - A. A., and D. C. Brydges, "Cramer's rule and loop ensembles", preliminary
@@ -99,7 +102,7 @@ A. A., "Towards three-dimensional conformal probability",  p-Adic Numbers Ultram
 </li>
 
 <li><p>
-A. A. and J. Chipalkatti, "On the reconstruction problem for Pascal lines", Discrete Comput. Geom. 60 (2018), no. 2, 381--405.
+A. A., and J. Chipalkatti, "On the reconstruction problem for Pascal lines", Discrete Comput. Geom. 60 (2018), no. 2, 381--405.
 <a href="https://arxiv.org/abs/1608.05056">Preprint version</a>.
 <a href="https://link.springer.com/article/10.1007/s00454-018-9981-4">Published version</a>.
 </li>
@@ -309,7 +312,7 @@ Constructive physics
 <BR>
 <h2>Other:</h2>
 <p>
-- A. A., P.  Blanchard, J. Feldman, A. Jaffe, J. Jona-Lasinio, C.  Kopper, J. Magnen and V. Rivasseau, "Roland S&eacute;n&eacute;or".
+- A. A., P.  Blanchard, J. Feldman, A. Jaffe, J. Jona-Lasinio, C.  Kopper, J. Magnen, and V. Rivasseau, "Roland S&eacute;n&eacute;or".
 <a href="http://www.iamp.org/bulletins/old-bulletins/Bulletin-July2016-print.pdf">International Association of Mathematical Physics News Bulletin, July 2016</a>.
 
 <BR>
