--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,14 @@ which we think is important for statistical mechanics.
 <ol>
 
 <li><p>
+A. A., P. Brunialti, T. Doan, and P. Velie,
+"A bijection for tuples of commuting permutations and a log-concavity conjecture".
+Res. Number Theory 10 (2024), no.2, 45.
+<a href="https://arxiv.org/abs/2309.09407">Preprint version</a>.
+<a href="https://link.springer.com/article/10.1007/s40993-024-00531-8">Published version</a>.
+</li>
+   
+<li><p>
 A. A., "A local injective proof of log-concavity for increasing spanning forests". Discrete Math.
 346 (2023), no. 12, Paper No. 113651.
 <a href="https://arxiv.org/abs/2012.14330">Preprint version</a>.
