--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,9 @@
 <h2> Preprints : </h2> 
 
 <p>
+- A. A., "A combinatorial formula for the coefficients of multidimensional resultants",
+<a href="https://arxiv.org/abs/2407.04429">arXiv:2407.04429[math.AC]</a>.
+<p>
 - A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of ℓ-tuples of pairwise commuting permutations",
 <a href="https://arxiv.org/abs/2403.01441">arXiv:2403.01441[math.CO]</a>.
 <p>
