--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,9 @@
 <h2> Preprints : </h2> 
 
 <p>
+- A. A., B. Heim, and M. Neuhauser, "Bessenrodt--Ono inequalities for ℓ-tuples of pairwise commuting permutations",
+<a href="https://arxiv.org/abs/2409.04881">arXiv:2409.04881[math.CO]</a>. 
+<p>
 - A. A., "A combinatorial formula for the coefficients of multidimensional resultants",
 <a href="https://arxiv.org/abs/2407.04429">arXiv:2407.04429[math.AC]</a>.
 <p>
