--- a/forestpage.html
+++ b/forestpage.html
@@ -43,7 +43,7 @@ found a proof which uses minimal decompositions of permutation
 as products of transpositions (<a href="LettreVLafforgue.pdf">pdf scan</a>).
 <p>
 A pedagogical presentation can be
-found <a href="http://people.virginia.edu/~aa4cr/BKAR.pdf">here</a>.
+found <a href="BKAR.pdf">here</a>.
 
 
 
