--- a/publications.html
+++ b/publications.html
@@ -32,9 +32,6 @@
 - A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of ℓ-tuples of pairwise commuting permutations",
 <a href="https://arxiv.org/abs/2403.01441">arXiv:2403.01441[math.CO]</a>.
 <p>
-- A. A., and A. Thomas, "Structure constants for simple Lie algebras from principal sl2-triple",
-<a href="https://arxiv.org/abs/2309.08213">arXiv:2309.08213[math.RT]</a>.  
-<p>
 - A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations",
 <a href="https://arxiv.org/abs/2309.07358">arXiv:2309.07358[math.CO]</a>.
 <p>
@@ -65,6 +62,13 @@ which we think is important for statistical mechanics.
 <h2> Published articles : </h2>
 
 <ol>
+
+<li><p>
+A. A., and A. Thomas, "Structure constants for simple Lie algebras from a principal sl2-triple". 	
+Journal of Lie Theory 34 (2024), no. 4, 829--862.
+<a href="https://arxiv.org/abs/2309.08213">Preprint version</a>.
+<a href="https://www.heldermann.de/JLT/JLT34/JLT344/jlt34040.htm">Published version</a>.
+</li>
 
 <li><p>
 A. A., P. Brunialti, T. Doan, and P. Velie,
