--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@ which we think is important for statistical mechanics.
 
 <li><p>
 A. A., and A. Thomas, "Structure constants for simple Lie algebras from a principal sl2-triple". 	
-Journal of Lie Theory 34 (2024), no. 4, 829--862.
+J. Lie Theory 34 (2024), no. 4, 829--862.
 <a href="https://arxiv.org/abs/2309.08213">Preprint version</a>.
 <a href="https://www.heldermann.de/JLT/JLT34/JLT344/jlt34040.htm">Published version</a>.
 </li>
