--- a/publications.html
+++ b/publications.html
@@ -29,12 +29,6 @@
 - A. A., "A combinatorial formula for the coefficients of multidimensional resultants",
 <a href="https://arxiv.org/abs/2407.04429">arXiv:2407.04429[math.AC]</a>.
 <p>
-- A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of ℓ-tuples of pairwise commuting permutations",
-<a href="https://arxiv.org/abs/2403.01441">arXiv:2403.01441[math.CO]</a>.
-<p>
-- A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations",
-<a href="https://arxiv.org/abs/2309.07358">arXiv:2309.07358[math.CO]</a>.
-<p>
 - A. A., "Non-Abelian correlation inequalities and stable determinantal polynomials",
 <a href="https://arxiv.org/abs/2207.07603">arXiv:2207.07603[math-ph]</a>.
 <p>
@@ -63,6 +57,19 @@ which we think is important for statistical mechanics.
 
 <ol>
 
+<li><p>
+A. A., B. Heim, ad M. Neuhauser, "On a mod 3 property of l-tuples of pairwise commuting permutations". 
+Ramanujan J. 66 (2025), 1--15. 
+<a href="https://arxiv.org/abs/2403.01441">Preprint version</a>.   
+<a href="https://doi.org/10.1007/s11139-024-00967-7">Journal version</a>.
+</li>
+   
+<li><p>
+A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations".
+Ann. Comb. (2024). <a href="https://arxiv.org/abs/2309.07358">Preprint version</a>. 
+<a href="https://doi.org/10.1007/s00026-024-00724-z">Journal version</a>.
+</li>
+   
 <li><p>
 A. A., and A. Thomas, "Structure constants for simple Lie algebras from a principal sl2-triple". 	
 J. Lie Theory 34 (2024), no. 4, 829--862.
