--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@ which we think is important for statistical mechanics.
 <ol>
 
 <li><p>
-A. A., B. Heim, ad M. Neuhauser, "On a mod 3 property of l-tuples of pairwise commuting permutations". 
+A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of l-tuples of pairwise commuting permutations". 
 Ramanujan J. 66 (2025), 1--15. 
 <a href="https://arxiv.org/abs/2403.01441">Preprint version</a>.   
 <a href="https://doi.org/10.1007/s11139-024-00967-7">Journal version</a>.
