--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
 <h2> Preprints : </h2> 
 
 <p>
-- A. A., B. Heim, and M. Neuhauser, "Bessenrodt--Ono inequalities for ℓ-tuples of pairwise commuting permutations",
+- A. A., B. Heim, and M. Neuhauser, "Bessenrodt-Ono inequalities for ℓ-tuples of pairwise commuting permutations",
 <a href="https://arxiv.org/abs/2409.04881">arXiv:2409.04881[math.CO]</a>. 
 <p>
 - A. A., "A combinatorial formula for the coefficients of multidimensional resultants",
@@ -59,7 +59,7 @@ which we think is important for statistical mechanics.
 
 <li><p>
 A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of l-tuples of pairwise commuting permutations". 
-Ramanujan J. 66 (2025), 1--15. 
+Ramanujan J. 66 (2025), 1-15. 
 <a href="https://arxiv.org/abs/2403.01441">Preprint version</a>.   
 <a href="https://doi.org/10.1007/s11139-024-00967-7">Journal version</a>.
 </li>
@@ -72,7 +72,7 @@ Ann. Comb. (2024). <a href="https://arxiv.org/abs/2309.07358">Preprint version</
    
 <li><p>
 A. A., and A. Thomas, "Structure constants for simple Lie algebras from a principal sl2-triple". 	
-J. Lie Theory 34 (2024), no. 4, 829--862.
+J. Lie Theory 34 (2024), no. 4, 829-862.
 <a href="https://arxiv.org/abs/2309.08213">Preprint version</a>.
 <a href="https://www.heldermann.de/JLT/JLT34/JLT344/jlt34040.htm">Published version</a>.
 </li>
@@ -93,57 +93,60 @@ A. A., "A local injective proof of log-concavity for increasing spanning forests
 </li>
 
 <li><p>
-A. A., "QFT, RG, and all that, for mathematicians". In: "Advances in Non-Archimedean Analysis and Applications, The p-adic Methodology in STEAM-H", Eds.: W. A. Zuniga-Galindo and Bourama Toni, pp. 167--183, Springer, 2021.
+A. A., "QFT, RG, and all that, for mathematicians". In: "Advances in Non-Archimedean Analysis and Applications, The p-adic Methodology in STEAM-H",
+   Eds.: W. A. Zuniga-Galindo and Bourama Toni, pp. 167-183, Springer, 2021.
 <a href="https://arxiv.org/abs/1311.4897">Preprint version</a>.
 <a href="https://link.springer.com/chapter/10.1007/978-3-030-81976-7_4">Published version</a>.
 </li>
 
 <li><p>
-A. A., "A second-quantized Kolmogorov-Chentsov Theorem via the operator product expansion", Comm. Math. Phys.  376 (2020), no. 1, 555--608.
+A. A., "A second-quantized Kolmogorov-Chentsov Theorem via the operator product expansion", 
+   Comm. Math. Phys.  376 (2020), no. 1, 555-608.
 <a href="https://arxiv.org/abs/1604.05259">Preprint version</a>.
 <a href="https://link.springer.com/article/10.1007/s00220-019-03665-4">Published version</a>.
 </li>
 
 <li><p>
-A. A., "An algebraic independence result related to a conjecture of Dixmier on binary form invariants", Res. Math. Sci. 6 (2019), no. 3, Paper No. 26, 17 pp.
+A. A., "An algebraic independence result related to a conjecture of Dixmier on binary form invariants", 
+Res. Math. Sci. 6 (2019), no. 3, Paper No. 26, 17 pp.
 <a href="https://arxiv.org/abs/1903.11147">Preprint version</a>.
 <a href="https://link.springer.com/article/10.1007/s40687-019-0189-x">Published version</a>.
 </li>
 
 <li><p>
-A. A., "The weakly dependent strong law of large numbers revisited", Grad. J. Math. 3 (2018), no. 2, 94--97.
+A. A., "The weakly dependent strong law of large numbers revisited", Grad. J. Math. 3 (2018), no. 2, 94-97.
 <a href="https://arxiv.org/abs/1801.09265">Preprint version</a>.
 <a href="https://www.gradmath.org/article/the-weakly-dependent-strong-law-of-large-numbers-revisited/">Published version</a>.
 </li>
 
 <li><p>
-A. A., "Towards three-dimensional conformal probability",  p-Adic Numbers Ultrametric Anal. Appl. 10 (2018), no. 4, 233--252.
+A. A., "Towards three-dimensional conformal probability",  p-Adic Numbers Ultrametric Anal. Appl. 10 (2018), no. 4, 233-252.
 <a href="https://arxiv.org/abs/1511.03180">Preprint version</a>.
 <a href="https://link.springer.com/article/10.1134/S2070046618040015">Published version</a>.
 </li>
 
 <li><p>
-A. A., and J. Chipalkatti, "On the reconstruction problem for Pascal lines", Discrete Comput. Geom. 60 (2018), no. 2, 381--405.
+A. A., and J. Chipalkatti, "On the reconstruction problem for Pascal lines", Discrete Comput. Geom. 60 (2018), no. 2, 381-405.
 <a href="https://arxiv.org/abs/1608.05056">Preprint version</a>.
 <a href="https://link.springer.com/article/10.1007/s00454-018-9981-4">Published version</a>.
 </li>
 
 <li><p>
-A. A., C. Ikenmeyer, and G. Royle,  "16,051 formulas for Ottaviani's invariant of cubic threefolds",  J. Algebra (Computational Algebra) 447 (2016), 649--663.
+A. A., C. Ikenmeyer, and G. Royle,  "16,051 formulas for Ottaviani's invariant of cubic threefolds",  J. Algebra (Computational Algebra) 447 (2016), 649-663.
 <a href="http://arxiv.org/abs/1402.2669">Preprint version</a>.
 <a href="http://www.sciencedirect.com/science/article/pii/S0021869315005657">Published version</a>.
 </li>
 
 <li><p>
 A. A., and J. Chipalkatti, "On Hilbert covariants".
-Canadian J. Math. 66 (2014), no 1, 3--30.
+Canadian J. Math. 66 (2014), no 1, 3-30.
 <a href="http://arxiv.org/abs/1203.4761">Preprint version</a>.
 <a href="http://cms.math.ca/10.4153/CJM-2012-046-1">Published version</a>.
 </li>
 
 <li><p>
 A. A., and J. Chipalkatti, "Quadratic involutions on binary forms".
-Michigan Math. J. 61 (2012), no. 2, 279--296.
+Michigan Math. J. 61 (2012), no. 2, 279-296.
 <a href="http://arxiv.org/abs/1008.3117">Preprint version</a>.
 <a href="http://projecteuclid.org/DPubS?service=UI&version=1.0&verb=Display&handle=euclid.mmj/1339011528">Published version</a>.
 </li>
@@ -157,7 +160,7 @@ J. Knot Theory Ramifications 21 (2012), no. 3, 1250022 (62 pages).
 
 <li><p>
 A. A., and D. Hasler, "Analyticity of the ground state energy for massless Nelson models".
- Comm. Math. Phys. 310 (2012), no. 2, 511--536.
+ Comm. Math. Phys. 310 (2012), no. 2, 511-536.
 <a href="http://arxiv.org/abs/1008.4628">Preprint version</a>.
 <a href="http://www.springerlink.com/content/16551766680x3152/">Published version</a>.
 </li>
@@ -166,14 +169,14 @@ A. A., and D. Hasler, "Analyticity of the ground state energy for massless Nelso
 A. A., "A massless quantum field theory over the p-adics", contribution to the Oberwolfach Report
 or the 2011 meeting "The Renormalization Group"
 organized by: M. Disertori, J. Feldman and M. Salmhofer.
-Oberwolfach Rep. 8 (2011), no. 1, pp. 785--788.
+Oberwolfach Rep. 8 (2011), no. 1, pp. 785-788.
 <a href="http://www.ems-ph.org/journals/show_abstract.php?issn=1660-8933&vol=8&iss=1&rank=15">Published version</a>.
 <a href="http://www.mfo.de/document/1111/OWR_2011_15.pdf">Oberwolfach version</a>.
 <a href="http://arxiv.org/abs/1104.2937">Preprint version</a>.
 </li>
 
 <li><p>
-A. A., "The ground state energy of the massless spin-Boson model". Ann. Henri Poincar&eacute; 12 (2011), no. 7, 1321--1347.
+A. A., "The ground state energy of the massless spin-Boson model". Ann. Henri Poincar&eacute; 12 (2011), no. 7, 1321-1347.
 <a href="http://arxiv.org/abs/1005.4366">Preprint version</a>.
 <a href="http://www.springerlink.com/content/nk3857847n642754/">Published version</a>.
 </li>
@@ -181,7 +184,7 @@ A. A., "The ground state energy of the massless spin-Boson model". Ann. Henri Po
 <li><p>
 A. A., "Renormalization group trajectories between two fixed points".
 In: "XVIth International Congress on Mathematical Physics,
-Prague, Czech Republic, 3 -- 8 August 2009", Ed.: Pavel Exner, 346--351,
+Prague, Czech Republic, 3-8 August 2009", Ed.: Pavel Exner, 346-351,
 World Scientific, Singapore, 2010.
 <a href="http://arxiv.org/abs/0910.1063"> Preprint version</a>. <a href="http://www.worldscibooks.com/physics/7727.html">Published version</a>.
 </li>
@@ -189,28 +192,28 @@ World Scientific, Singapore, 2010.
 <li><p>
 A. A., and J. Chipalkatti, 
 "The Higher Transvectants are Redundant". Ann. Inst. Fourier (Grenoble) 59 (2009),
-no. 5, 1671--1713.
+no. 5, 1671-1713.
 <a href="http://arxiv.org/abs/0801.1533"> Preprint version </a>. <a href="http://aif.cedram.org/aif-bin/item?id=AIF_2009__59_5_1671_0">Published version</a>.
 </li>
 
 <li><p>
 A. A., A. Procacci, and B. Scoppola,
 "Clustering bounds on n-point correlations for unbounded spin systems".
-J. Stat. Phys. 136 (2009), no. 3, 405--452.
+J. Stat. Phys. 136 (2009), no. 3, 405-452.
 <a href="http://arxiv.org/abs/0901.4756"> Preprint version </a>. <a href="http://www.springerlink.com/content/pm3440t26gl685v4/">Published version</a>.
 </li>
 
 <li><p>
 A. A., and J. Chipalkatti,
 "On the Linear Combinants of a Binary Pencil".
-Glasgow Math. J. 51 (2009), no. 3, 481--498.
+Glasgow Math. J. 51 (2009), no. 3, 481-498.
 <a href="http://arxiv.org/abs/0802.3149"> Preprint version </a>.
 <a href="http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=6031176&fulltextType=RA&fileId=S0017089509005126">Published version</a>.
 </li>
 
 <li><p>
 A. A., "A complete renormalization group trajectory between
-two fixed points". Comm. Math. Phys. 276 (2007), no. 3, 727--772.
+two fixed points". Comm. Math. Phys. 276 (2007), no. 3, 727-772.
 <a href="http://arXiv.org/abs/math-ph/0610018"> Preprint version </a>.
 <a href="http://www.springerlink.com/content/w1363q36jm6750h1/">Published version</a>.
 </li>
@@ -220,7 +223,7 @@ A. A., "Towards a complete renormalization group trajectory between
 two fixed points", contribution to the Oberwolfach Report
 for the 2006 meeting "The Rigorous Renormalization Group"
 organized by: C. Kopper, V. Rivasseau and M. Salmhofer.
-Oberwolfach Rep. 3 (2006), no. 2, 1061--1063.
+Oberwolfach Rep. 3 (2006), no. 2, 1061-1063.
 <a href="http://www.ems-ph.org/journals/show_abstract.php?issn=1660-8933&vol=3&iss=2&rank=3">
 Published version</a>.
 <a href="http://www.mfo.de/document/0615/OWR_2006_17.pdf">Oberwolfach version</a>.
@@ -229,7 +232,7 @@ Published version</a>.
 <li><p>
 A. A., Short appendix for the article "On the Jacobian ideal
 of the binary discriminant" by C. D'Andrea and J. Chipalkatti.
-Collect. Math. 58 (2007), no. 2, 155--180.
+Collect. Math. 58 (2007), no. 2, 155-180.
 <a href="http://arXiv.org/abs/math.AG/0601705"> Preprint version </a>.
 <a href="http://www.collectanea.ub.edu/index.php/Collectanea/article/view/4107">Published version</a>.
 </li>
@@ -237,7 +240,7 @@ Collect. Math. 58 (2007), no. 2, 155--180.
 <li><p>
 A. A., and J. Chipalkatti,
 "On the Wronskian combinants of binary forms".
-J. Pure Appl. Algebra 210 (2007), no. 1, 43--61.
+J. Pure Appl. Algebra 210 (2007), no. 1, 43-61.
 <a href="http://arXiv.org/abs/math.AG/0507488"> Preprint version </a>.
 <a href="http://www.sciencedirect.com/science/article/pii/S0022404906001812">Published version</a>.
 </li>
@@ -245,7 +248,7 @@ J. Pure Appl. Algebra 210 (2007), no. 1, 43--61.
 <li><p>
 A. A., and J. Chipalkatti,
 "Brill-Gordan Loci, transvectants and an analogue of the Foulkes conjecture".
-Adv. Math. 208 (2007), no. 2, 491--520.
+Adv. Math. 208 (2007), no. 2, 491-520.
 <a href="http://arXiv.org/abs/math.AG/0411110"> Preprint version </a>.
 <a href="http://www.sciencedirect.com/science/article/pii/S0001870806000909">Published version</a>.
 </li>
@@ -253,7 +256,7 @@ Adv. Math. 208 (2007), no. 2, 491--520.
 <li><p>
 A. A., and J. Chipalkatti,
 "The bipartite Brill-Gordan locus and angular momentum".
-Transform. Groups 11 (2006), no. 3, 341--370.
+Transform. Groups 11 (2006), no. 3, 341-370.
 <a href="http://arXiv.org/abs/math.AG/0502542"> Preprint version </a>.
 <a href="http://www.springerlink.com/content/wm3318667411003m/">Published version</a>.
 </li>
@@ -261,14 +264,14 @@ Transform. Groups 11 (2006), no. 3, 341--370.
 <li><p>
 A. A., "A computational solution to a question by Beauville
 on the invariants of the binary quintic".
-J. Algebra 303 (2006), no. 2 (Computational Algebra), 771--788.
+J. Algebra 303 (2006), no. 2 (Computational Algebra), 771-788.
 <a href="http://arXiv.org/abs/math.AC/0508421"> Preprint version </a>.
 <a href="http://www.sciencedirect.com/science/article/pii/S0021869306000287">Published version</a>.
 </li>
 
 <li><p>
 A. A., "The Grassmann-Berezin calculus and theorems of the matrix-tree type". 
-Adv. in Appl. Math. 33 (2004), no. 1, 51--70.
+Adv. in Appl. Math. 33 (2004), no. 1, 51-70.
 <a href="http://arXiv.org/abs/math.CO/0306396"> Preprint version </a>.
 <a href="http://www.sciencedirect.com/science/article/pii/S0196885803001465">Published version</a>.
 </li>
@@ -282,14 +285,14 @@ S&eacute;m. Lothar. Combin. 49 (2002/04), Art. B49c, 45 pp. (electronic).
 
 <li><p>
 A. A., "A physicist's proof of the Lagrange-Good multivariable inversion
-formula". J. Phys. A 36 (2003), no. 36, 9471--9477.
+formula". J. Phys. A 36 (2003), no. 36, 9471-9477.
 <a href="http://arXiv.org/abs/math.CO/0208174"> Preprint version </a>.
 <a href="http://iopscience.iop.org/0305-4470/36/36/304/">Published version</a>.
 </li>
 
 <li><p>
 A. A., "The Jacobian conjecture as a problem of perturbative quantum
-field theory". Ann. Henri Poincar&eacute; (2003), no. 2, 199--215.
+field theory". Ann. Henri Poincar&eacute; (2003), no. 2, 199-215.
 <a href="http://arXiv.org/abs/math.CO/0208173"> Preprint version </a>.
 <a href="http://link.springer.com/article/10.1007/s00023-003-0127-7">Published version</a>.
 </li>
@@ -297,7 +300,7 @@ field theory". Ann. Henri Poincar&eacute; (2003), no. 2, 199--215.
 <li><p>
 A. A., J. Magnen, and V. Rivasseau,
 "Bosonic monocluster expansion".
-Comm. Math. Phys. 229 (2002), no. 2, 183--207.
+Comm. Math. Phys. 229 (2002), no. 2, 183-207.
 <a href="http://arXiv.org/abs/math-ph/0002053"> Preprint version </a>.
 <a href="http://www.springerlink.com/content/41424quhqm0py6th/">Published version</a>.
 </li>
@@ -305,7 +308,7 @@ Comm. Math. Phys. 229 (2002), no. 2, 183--207.
 <li><p>
 A. A., and V. Rivasseau,
 "Explicit Fermionic tree expansions".
-Lett. Math. Phys. 44 (1998), no. 1, 77--88.
+Lett. Math. Phys. 44 (1998), no. 1, 77-88.
 <a href="http://arXiv.org/abs/cond-mat/9712055"> Preprint version </a>.
 <a href="http://www.springerlink.com/content/m1611r6x36657m16/">Published version</a>.
 </li>
@@ -313,7 +316,7 @@ Lett. Math. Phys. 44 (1998), no. 1, 77--88.
 <li><p>
 A. A., and V. Rivasseau,
 "An explicit large versus small field multiscale cluster expansion".
-Rev. Math. Phys. 9 (1997), no. 2, 123--199.
+Rev. Math. Phys. 9 (1997), no. 2, 123-199.
 <a href="http://arXiv.org/abs/hep-th/9605094"> Preprint version </a>.
 <a href="http://www.worldscinet.com/rmp/09/0902/S0129055X97000063.html">Published version</a>.
 </li>
@@ -322,7 +325,7 @@ Rev. Math. Phys. 9 (1997), no. 2, 123--199.
 A. A., and V. Rivasseau,
 "Trees, forests and jungles: a botanical garden for cluster expansions".
 Constructive physics
-(Palaiseau, 1994), 7--36, Lecture Notes in Phys.,
+(Palaiseau, 1994), 7-36, Lecture Notes in Phys.,
 446, Springer, Berlin, 1995.
 <a href="http://arXiv.org/abs/hep-th/9409094"> Preprint version </a>.
 <a href="http://www.springerlink.com/content/p355744066221833/">Published version</a>.
