--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,10 @@
 <h2> Preprints : </h2> 
 
 <p>
+- A. A., and S. Starr, "A central limit theorem for a generalization of the Ewens measure to random
+tuples of commuting permutations",
+<a href="https://arxiv.org/abs/2505.11469">arXiv:2505.11469[math.PR]</a>.   
+<p>
 - A. A., B. Heim, and M. Neuhauser, "Bessenrodt-Ono inequalities for ℓ-tuples of pairwise commuting permutations",
 <a href="https://arxiv.org/abs/2409.04881">arXiv:2409.04881[math.CO]</a>. 
 <p>
