--- a/publications.html
+++ b/publications.html
@@ -9,15 +9,10 @@
 &nbsp;
 
 
-
-
 <a href="index.html"> Back to homepage </a>
 
 <p>
 <h1>Abdelmalek Abdesselam, Publications and Preprints</h1>
-
-
-
 
 <BR>
 <h2> Preprints : </h2> 
@@ -70,7 +65,7 @@ Ramanujan J. 66 (2025), 1-15.
    
 <li><p>
 A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations".
-Ann. Comb. (2024). <a href="https://arxiv.org/abs/2309.07358">Preprint version</a>. 
+Ann. Comb. 29 (2025), 563-573. <a href="https://arxiv.org/abs/2309.07358">Preprint version</a>. 
 <a href="https://doi.org/10.1007/s00026-024-00724-z">Journal version</a>.
 </li>
    
