--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@ Ramanujan J. 66 (2025), 1-15.
    
 <li><p>
 A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations".
-Ann. Comb. 29 (2025), 563-573. <a href="https://arxiv.org/abs/2309.07358">Preprint version</a>. 
+Ann. Comb. 29 (2025), no. 2, 563-573. <a href="https://arxiv.org/abs/2309.07358">Preprint version</a>. 
 <a href="https://doi.org/10.1007/s00026-024-00724-z">Journal version</a>.
 </li>
    
