--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,10 @@
 <BR>
 <h2> Preprints : </h2> 
 
+
+<p>
+- A. A., "Proof of a conjecture by Starr and log-concavity for random commuting permutations",
+<a href="https://arxiv.org/abs/2506.06894">arXiv:2506.06894[math.CO]</a>.
 <p>
 - A. A., and S. Starr, "A central limit theorem for a generalization of the Ewens measure to random
 tuples of commuting permutations",
