--- a/publications.html
+++ b/publications.html
@@ -26,9 +26,6 @@
 tuples of commuting permutations",
 <a href="https://arxiv.org/abs/2505.11469">arXiv:2505.11469[math.PR]</a>.   
 <p>
-- A. A., B. Heim, and M. Neuhauser, "Bessenrodt-Ono inequalities for ℓ-tuples of pairwise commuting permutations",
-<a href="https://arxiv.org/abs/2409.04881">arXiv:2409.04881[math.CO]</a>. 
-<p>
 - A. A., "A combinatorial formula for the coefficients of multidimensional resultants",
 <a href="https://arxiv.org/abs/2407.04429">arXiv:2407.04429[math.AC]</a>.
 <p>
@@ -60,6 +57,13 @@ which we think is important for statistical mechanics.
 
 <ol>
 
+<li><p>  
+A. A., B. Heim, and M. Neuhauser, "Bessenrodt-Ono inequalities for ℓ-tuples of pairwise commuting permutations".
+Ann. Comb. (2025).
+<a href="https://arxiv.org/abs/2409.04881">Preprint version</a>.
+<a href="https://doi.org/10.1007/s00026-025-00767-w">Journal version</a>
+</li>
+   
 <li><p>
 A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of l-tuples of pairwise commuting permutations". 
 Ramanujan J. 66 (2025), 1-15. 
@@ -365,6 +369,7 @@ forest formula.
 
 </body>
 </html>
+
 
 
 
