--- a/publications.html
+++ b/publications.html
@@ -346,6 +346,9 @@ Constructive physics
 - A. A., P.  Blanchard, J. Feldman, A. Jaffe, J. Jona-Lasinio, C.  Kopper, J. Magnen, and V. Rivasseau, "Roland S&eacute;n&eacute;or".
 <a href="http://www.iamp.org/bulletins/old-bulletins/Bulletin-July2016-print.pdf">International Association of Mathematical Physics News Bulletin, July 2016</a>.
 
+<p>
+- A. A., <a href="HermiteSyzygie.pdf">2013 Letter to Carlos Contou-Carrere with a graphical proof of the Hermite syzygy for the covariants of the binary quartic</a>. In French.
+   
 <BR>
 <h2> Ph.D. Thesis : </h2> 
 <p>
@@ -369,6 +372,7 @@ forest formula.
 
 </body>
 </html>
+
 
 
 
