--- a/teaching.html
+++ b/teaching.html
@@ -19,7 +19,13 @@
 <h2>Teaching :</h2>
 
 <p>
-   Spring 2024: I am teaching MATH 8450 (Topics in Mathematical Physics) - Topic: <a href="MATH8450Spring2024.html">Mathematics of Quantum Field Theory</a>.
+   Fall 2025: I am teaching two sections of MATH 3100 (Introduction to Probability).
+<p>
+   Spring 2025: I taught MATH 4840 (Introduction to Mathematical Research).
+<p>
+   Fall 2024: I taught two sections of MATH 3100 (Introduction to Probability).
+<p>
+   Spring 2024: I taught MATH 8450 (Topics in Mathematical Physics) - Topic: <a href="MATH8450Spring2024.html">Mathematics of Quantum Field Theory</a>.
 <p>
    Fall 2023: I taught two sections of MATH 3250 (Ordinary Differential Equations).
 <p>
@@ -111,4 +117,5 @@ Fall 2007: I taught two sections of MATH 132 (Calculus II).
 
 </body>
 </html>
+
 
