--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Fax: (1) 434 982 3084
 <a href="teaching.html"> <h1> Teaching </h1> </a>
 
 <p>
-   My former Ph.D. student's page: <a href="https://www.imperial.ac.uk/people/a.chandra">Ajay Chandra</a>, Senior Lecturer at Imperial College, London, UK.
+   My former Ph.D. student's page: <a href="https://sites.google.com/view/ajaychandra/home">Ajay Chandra</a>, Associate Professor at Purdue University.
 
 <h2>Other activities :</h2>
 
@@ -73,4 +73,5 @@ at the Isaac Newton Institute for Mathematical Sciences, Cambridge, UK.
 
 </body>
 </html>
+
 
