--- a/publications.html
+++ b/publications.html
@@ -61,20 +61,20 @@ which we think is important for statistical mechanics.
 A. A., B. Heim, and M. Neuhauser, "Bessenrodt-Ono inequalities for ℓ-tuples of pairwise commuting permutations".
 Ann. Comb. (2025).
 <a href="https://arxiv.org/abs/2409.04881">Preprint version</a>.
-<a href="https://doi.org/10.1007/s00026-025-00767-w">Journal version</a>
+<a href="https://doi.org/10.1007/s00026-025-00767-w">Published version</a>
 </li>
    
 <li><p>
 A. A., B. Heim, and M. Neuhauser, "On a mod 3 property of l-tuples of pairwise commuting permutations". 
 Ramanujan J. 66 (2025), 1-15. 
 <a href="https://arxiv.org/abs/2403.01441">Preprint version</a>.   
-<a href="https://doi.org/10.1007/s11139-024-00967-7">Journal version</a>.
+<a href="https://doi.org/10.1007/s11139-024-00967-7">Published version</a>.
 </li>
    
 <li><p>
 A. A., "Log-concavity with respect to the number of orbits for infinite tuples of commuting permutations".
 Ann. Comb. 29 (2025), no. 2, 563-573. <a href="https://arxiv.org/abs/2309.07358">Preprint version</a>. 
-<a href="https://doi.org/10.1007/s00026-024-00724-z">Journal version</a>.
+<a href="https://doi.org/10.1007/s00026-024-00724-z">Published version</a>.
 </li>
    
 <li><p>
@@ -155,7 +155,7 @@ Canadian J. Math. 66 (2014), no 1, 3-30.
 A. A., and J. Chipalkatti, "Quadratic involutions on binary forms".
 Michigan Math. J. 61 (2012), no. 2, 279-296.
 <a href="http://arxiv.org/abs/1008.3117">Preprint version</a>.
-<a href="http://projecteuclid.org/DPubS?service=UI&version=1.0&verb=Display&handle=euclid.mmj/1339011528">Published version</a>.
+<a href="https://doi.org/10.1307/mmj/1339011528">Published version</a>.
 </li>
 
 <li><p>
@@ -169,7 +169,7 @@ J. Knot Theory Ramifications 21 (2012), no. 3, 1250022 (62 pages).
 A. A., and D. Hasler, "Analyticity of the ground state energy for massless Nelson models".
  Comm. Math. Phys. 310 (2012), no. 2, 511-536.
 <a href="http://arxiv.org/abs/1008.4628">Preprint version</a>.
-<a href="http://www.springerlink.com/content/16551766680x3152/">Published version</a>.
+<a href="https://doi.org/10.1007/s00220-011-1407-6">Published version</a>.
 </li>
 
 <li><p>
@@ -185,7 +185,7 @@ Oberwolfach Rep. 8 (2011), no. 1, pp. 785-788.
 <li><p>
 A. A., "The ground state energy of the massless spin-Boson model". Ann. Henri Poincar&eacute; 12 (2011), no. 7, 1321-1347.
 <a href="http://arxiv.org/abs/1005.4366">Preprint version</a>.
-<a href="http://www.springerlink.com/content/nk3857847n642754/">Published version</a>.
+<a href="https://doi.org/10.1007/s00023-011-0103-6">Published version</a>.
 </li>
 
 <li><p>
@@ -207,7 +207,8 @@ no. 5, 1671-1713.
 A. A., A. Procacci, and B. Scoppola,
 "Clustering bounds on n-point correlations for unbounded spin systems".
 J. Stat. Phys. 136 (2009), no. 3, 405-452.
-<a href="http://arxiv.org/abs/0901.4756"> Preprint version </a>. <a href="http://www.springerlink.com/content/pm3440t26gl685v4/">Published version</a>.
+<a href="http://arxiv.org/abs/0901.4756"> Preprint version </a>.
+<a href="https://doi.org/10.1007/s10955-009-9789-y">Published version</a>.
 </li>
 
 <li><p>
@@ -222,7 +223,7 @@ Glasgow Math. J. 51 (2009), no. 3, 481-498.
 A. A., "A complete renormalization group trajectory between
 two fixed points". Comm. Math. Phys. 276 (2007), no. 3, 727-772.
 <a href="http://arXiv.org/abs/math-ph/0610018"> Preprint version </a>.
-<a href="http://www.springerlink.com/content/w1363q36jm6750h1/">Published version</a>.
+<a href="https://doi.org/10.1007/s00220-007-0352-x">Published version</a>.
 </li>
 
 <li><p>
@@ -265,7 +266,7 @@ A. A., and J. Chipalkatti,
 "The bipartite Brill-Gordan locus and angular momentum".
 Transform. Groups 11 (2006), no. 3, 341-370.
 <a href="http://arXiv.org/abs/math.AG/0502542"> Preprint version </a>.
-<a href="http://www.springerlink.com/content/wm3318667411003m/">Published version</a>.
+<a href="https://doi.org/10.1007/s00031-005-1111-8">Published version</a>.
 </li>
 
 <li><p>
@@ -287,7 +288,7 @@ Adv. in Appl. Math. 33 (2004), no. 1, 51-70.
 A. A., "Feynman diagrams in algebraic combinatorics". 
 S&eacute;m. Lothar. Combin. 49 (2002/04), Art. B49c, 45 pp. (electronic).
 <a href="http://arXiv.org/abs/math.CO/0212121"> Preprint version </a>.
-<a href="http://www.emis.de/journals/SLC/wpapers/s49abdess.html">Published version</a>.
+<a href="https://www.mat.univie.ac.at/~slc/wpapers/s49abdess.html">Published version</a>.
 </li>
 
 <li><p>
@@ -309,7 +310,7 @@ A. A., J. Magnen, and V. Rivasseau,
 "Bosonic monocluster expansion".
 Comm. Math. Phys. 229 (2002), no. 2, 183-207.
 <a href="http://arXiv.org/abs/math-ph/0002053"> Preprint version </a>.
-<a href="http://www.springerlink.com/content/41424quhqm0py6th/">Published version</a>.
+<a href="https://doi.org/10.1007/s002200200654">Published version</a>.
 </li>
 
 <li><p>
@@ -317,7 +318,7 @@ A. A., and V. Rivasseau,
 "Explicit Fermionic tree expansions".
 Lett. Math. Phys. 44 (1998), no. 1, 77-88.
 <a href="http://arXiv.org/abs/cond-mat/9712055"> Preprint version </a>.
-<a href="http://www.springerlink.com/content/m1611r6x36657m16/">Published version</a>.
+<a href="https://doi.org/10.1023/A:1007413417112">Published version</a>.
 </li>
 
 <li><p>
@@ -335,7 +336,7 @@ Constructive physics
 (Palaiseau, 1994), 7-36, Lecture Notes in Phys.,
 446, Springer, Berlin, 1995.
 <a href="http://arXiv.org/abs/hep-th/9409094"> Preprint version </a>.
-<a href="http://www.springerlink.com/content/p355744066221833/">Published version</a>.
+<a href="https://doi.org/10.1007/3-540-59190-7_20">Published version</a>.
 </li>
 
 </ol>
@@ -372,6 +373,7 @@ forest formula.
 
 </body>
 </html>
+
 
 
 
