--- a/publications.html
+++ b/publications.html
@@ -178,7 +178,7 @@ or the 2011 meeting "The Renormalization Group"
 organized by: M. Disertori, J. Feldman and M. Salmhofer.
 Oberwolfach Rep. 8 (2011), no. 1, pp. 785-788.
 <a href="http://www.ems-ph.org/journals/show_abstract.php?issn=1660-8933&vol=8&iss=1&rank=15">Published version</a>.
-<a href="http://www.mfo.de/document/1111/OWR_2011_15.pdf">Oberwolfach version</a>.
+<a href="https://doi.org/10.14760/OWR-2011-15">Oberwolfach version</a>.
 <a href="http://arxiv.org/abs/1104.2937">Preprint version</a>.
 </li>
 
@@ -193,7 +193,7 @@ A. A., "Renormalization group trajectories between two fixed points".
 In: "XVIth International Congress on Mathematical Physics,
 Prague, Czech Republic, 3-8 August 2009", Ed.: Pavel Exner, 346-351,
 World Scientific, Singapore, 2010.
-<a href="http://arxiv.org/abs/0910.1063"> Preprint version</a>. <a href="http://www.worldscibooks.com/physics/7727.html">Published version</a>.
+<a href="http://arxiv.org/abs/0910.1063"> Preprint version</a>. <a href="https://doi.org/10.1142/9789814304634_0021">Published version</a>.
 </li>
 
 <li><p>
@@ -234,7 +234,7 @@ organized by: C. Kopper, V. Rivasseau and M. Salmhofer.
 Oberwolfach Rep. 3 (2006), no. 2, 1061-1063.
 <a href="http://www.ems-ph.org/journals/show_abstract.php?issn=1660-8933&vol=3&iss=2&rank=3">
 Published version</a>.
-<a href="http://www.mfo.de/document/0615/OWR_2006_17.pdf">Oberwolfach version</a>.
+<a href="https://doi.org/10.14760/OWR-2006-17">Oberwolfach version</a>.
 </li>
 
 <li><p>
@@ -373,6 +373,7 @@ forest formula.
 
 </body>
 </html>
+
 
 
 
